Restore NodeRegistryCompact.sol and update deployments
- Add NodeRegistryCompact.sol with safe upgrade mechanisms and growth controls
- Update deployments.json with correct NodeRegistry proxy address (0xF619343016DD4c863D56A8bC8fDC033Dd023E9F7)
- Add tachyon-backend/ to .gitignore (separate repository)
- Backend fixes for info command and WeiToEth display restored but not committed

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ test-failures/
 
 # Contract verification files
 verify-*.txt
+
+# Backend directories (separate repositories)
+go-backend/
+tachyon-backend/
